# opencve

./: .pre-commit-config.yaml  biome.jsonc
scheduler/: Dockerfile  Dockerfile.test  pyproject.toml  webserver_config.py
scheduler/dags/: check_smtp_dag.py  clean_reports_dag.py  opencve_dag.py
scheduler/dags/includes/: constants.py  notifiers.py  utils.py
scheduler/dags/includes/operators/: __init__.py  process_kb_operator.py
scheduler/dags/includes/tasks/: notifications.py  reports.py  smtp.py  statistics.py
scheduler/dags/templates/: email_notification.html  email_test.html
scheduler/tests/: conftest.py  test_handler.py  test_notifiers.py  test_utils.py  utils.py
scheduler/tests/data/changes/0001/: CVE-2024-6962.v1.json  CVE-2024-6962.v2.json
scheduler/tests/data/changes/0002/: CVE-2024-0001.json
scheduler/tests/data/invalid-cves/2025/: CVE-2025-8875.json
scheduler/tests/data/llm/2025/: CVE-2025-1000.json
scheduler/tests/data/multiple-changes/2024/: CVE-2024-6962.v1.json  CVE-2024-6962.v2.json
scheduler/tests/data/notifications/: prepare_payload_mock.json
scheduler/tests/data/redis/0001/: changes_details.json
scheduler/tests/operators/: test_process_kb.py
scheduler/tests/tasks/: test_reports.py
web/: Dockerfile  Dockerfile.test  manage.py  pyproject.toml
web/changes/: admin.py  forms.py  utils.py  views.py
web/changes/templates/changes/: change_cpes.html  change_description.html  change_detail.html  change_first_time.html  change_list.html  change_metrics.html  change_title.html  change_vendors.html  change_weaknesses.html
web/cves/: forms.py  search.py  utils.py  views.py
web/cves/templates/cves/: cve_detail.html  cve_list.html  statistics.html  vendor_list.html  vendor_subscribe.html  weakness_list.html
web/cves/templatetags/: opencve_extras.py
web/dashboards/: widgets.py
web/dashboards/templates/dashboards/: empty.html  index.html
web/onboarding/: forms.py
web/onboarding/templates/onboarding/: index.html
web/opencve/: mixins.py  urls.py
web/opencve/conf/: base.py
web/organizations/: auditlog.py  forms.py  middlewares.py  mixins.py  resources.py  urls.py  views.py
web/organizations/templates/organizations/: create_organization.html  delete_member.html  delete_organization.html  delete_token.html  edit_organization.html  edit_organization_audit_logs.html  edit_organization_base.html  edit_organization_general.html  edit_organization_members.html  edit_organization_tokens.html  list_organizations.html
web/projects/: forms.py  resources.py  views.py
web/projects/management/commands/: fix_missing_vendors.py
web/projects/templates/projects/: base_project.html  create_update.html  dashboard.html  delete_project.html  list_projects.html  report.html  reports.html  subscriptions.html  vulnerabilities.html
web/static/css/: custom.css
web/templates/: 404.html  500.html  base.html  messages.html  social_buttons.html  styles.html
web/templates/account/: account_inactive.html  base.html  email_change.html  email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  reauthenticate.html  signup.html  signup_closed.html  verification_sent.html
web/templates/mfa/: authenticate.html  index.html
web/templates/mfa/recovery_codes/: generate.html  index.html
web/templates/mfa/totp/: activate_form.html  deactivate_form.html
web/templates/socialaccount/: authentication_error.html  connections.html  login_cancelled.html  signup.html
web/tests/api/: test_auth.py  test_organization.py
web/tests/cves/: test_commands.py  test_models.py  test_views.py
web/tests/dashboards/: test_views.py  test_widgets.py
web/tests/data/serialized_cves/: CVE-2021-44228.json
web/tests/organizations/: test_middlewares.py
web/tests/projects/: test_views.py
web/tests/views/: test_views.py
web/users/: forms.py  models.py  views.py
web/users/management/commands/: import_from_v1.py
web/users/templates/users/: base.html
web/views/: forms.py
web/views/templates/views/: delete.html  list.html  save.html
(+75 files in other folders)
