[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "opencve-scheduler"
version = "2.4.0"
description = "OpenCVE Airflow scheduler"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "aiohttp==3.13.5",
  "aiosmtplib==5.1.0",
  "apache-airflow[sentry,statsd]==3.2.1",
  "apache-airflow-providers-celery==3.19.0",
  "apache-airflow-providers-postgres==6.6.3",
  "apache-airflow-providers-redis==4.4.4",
  "arrow==1.4.0",
  "gitpython==3.1.50",
  "more-itertools==11.0.2",
  "nested-lookup==0.2.25",
  "openai==2.37.0",
  "psycopg2-binary==2.9.12",
]

[dependency-groups]
dev = [
  "beautifulsoup4==4.14.3",
  "freezegun==1.5.5",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
]

[tool.hatch]
build.targets.wheel.packages = [ "dags/includes" ]

[tool.ruff]
extend-exclude = [
  "web/changes/migrations/*.py",
  "web/cves/migrations/*.py",
  "web/dashboards/migrations/*.py",
  "web/organizations/migrations/*.py",
  "web/projects/migrations/*.py",
  "web/users/migrations/*.py",
  "web/views/migrations/*.py",
]
lint.ignore = [
  "E402", # Module level import not at top of file
  "F841", # Local variable is assigned to but never used
]
lint.isort.force-single-line = true

[tool.isort]
profile = "black"

[tool.pyproject-fmt]
keep_full_version = true
max_supported_python = "3.12"

[tool.pytest]
ini_options.asyncio_mode = "auto"
ini_options.asyncio_default_fixture_loop_scope = "function"
ini_options.markers = [
  "airflow_db: reset Airflow database before test",
  "web_db: reset web database before test",
  "web_redis: reset redis before test",
]
